--- a/6 урок.html
+++ b/6 урок.html
@@ -7,28 +7,42 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+       <img style="width: 210px; height: 220px;margin-left: 630px;" src="https://i.pinimg.com/564x/cd/2b/33/cd2b33de4677b6c5a5fd660d39de2a0b.jpg" alt="Моя фотография">
+       <nav style="text-align: center;background-color: rgb(255, 255, 255);">
+       <a href="#Aboutme">О себе</a>
+       <a href="#Port">Портфолио</a>
+       <a href="#uslygi">Предоставление услуг</a>
+       </nav>
+    </header>
     <main>
-        <section class="css">О себе
+        <section>
+              <h2 id="Aboutme">Меня зовут Ксения,мне 15 лет.Я ученица выпускного класса в первой художественной школе города Казани</h2>
+              </section>
+        <section class="css">
+            <h2 id="Port">Я</h2>
             <ol>
-                <li >мне 15 лет</li>
-                <li>Экстраверт</li>
-                <l>Я отличница</li>
+                <li>Участвую в проектах по Движению Первых</li>
+                <li>Создавала проект для экологического турнира КОТЭ</li>
+                <li>Много побеждала в творческих конкурсах,такие как "Январские вечера"</li>
             </ol>
         </section>
-        <section class="css">Портфолио
+        <section class="css">
+            <h2 id="uslygi">Также</h2>
             <ol>
-                <li>Заканчиваю художку</li>
-                <li>Учусь программированию</li>
-                <li>Планирую стать разработчиком игр</li>
+                <li>Могу нарисовать картину или арт,все по вашему запросу</li>
+                <li>Консультацировать по рисованию</li>
             </ol>
         </section>
-        <section class="css">Предоставление услуг
-            <ol>
-                <li>Могу написать игру</li>
-                <li>Консультации</li>
-            </ol>
-        </section>
-        <button>Позвоните</button>
     </main>
+    <footer>
+        <button>Позвоните</button>
+        <script  src="script.js"></script>
+        <h1>Как с нами связаться</h1>
+            <a href="">+7898765443</a>
+            <a href="">andmdm@gmail.com</a>
+            <a href="">Соц сети</a>
+        <h1>Защищено авторскими правами</h1>
+    </footer>
 </body>
 </html>
